lab2/Code/syntax.output
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList
    9           | error COMMA ExtDecList
   10           | VarDec COMMA error

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | Exp error
   38     | RETURN Exp error
   39     | IF LP error RP Stmt
   40     | IF LP error RP Stmt ELSE Stmt
   41     | WHILE LP error RP Stmt

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI
   46    | Specifier DecList error

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | Exp LB error RB
   70    | ID LP error RP
   71    | Exp error ID

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 9 10 15 23 36 37 38 39 40 41 45 46 69 70 71
INT (258) 20 67
FLOAT (259) 68
PLUS (260) 55
MINUS (261) 56 60
STAR (262) 57
DIV (263) 58
AND (264) 52
OR (265) 53
NOT (266) 61
LP (267) 21 22 23 33 34 35 39 40 41 59 62 63 70
RP (268) 21 22 23 33 34 35 39 40 41 59 62 63 70
LB (269) 20 64 69
RB (270) 20 64 69
LC (271) 13 15 27
RC (272) 13 15 27
STRUCT (273) 13 14 15
RETURN (274) 32 38
IF (275) 33 34 39 40
ELSE (276) 34 40
WHILE (277) 35 41
ID (278) 16 18 19 21 22 23 62 63 65 66 70 71
ASSIGNOP (279) 50 51
RELOP (280) 54
DOT (281) 65
TYPE (282) 11
SEMI (283) 4 5 30 32 36 44 45
COMMA (284) 8 9 10 24 48 72
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8 9 10, on right: 4 8 9
Specifier (36)
    on left: 11 12, on right: 4 5 6 26 44 45 46
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 15
Tag (39)
    on left: 18, on right: 14
VarDec (40)
    on left: 19 20, on right: 7 8 10 20 26 49 50
FunDec (41)
    on left: 21 22 23, on right: 6
VarList (42)
    on left: 24 25, on right: 21 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 27 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 28 33 34
    35 39 40 41
DefList (47)
    on left: 42 43, on right: 13 27 42
Def (48)
    on left: 44 45 46, on right: 42
DecList (49)
    on left: 47 48, on right: 44 46 48
Dec (50)
    on left: 49 50, on right: 47 48
Exp (51)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71, on right: 30 32 33 34 35 37 38 50 51 52 53 54 55 56 57
    58 59 60 61 64 65 69 71 72 73
Args (52)
    on left: 72 73, on right: 62 72


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    9 ExtDecList: error . COMMA ExtDecList

    COMMA  shift, and go to state 20


State 14

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   10           | VarDec . COMMA error
   20 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 27
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

    9 ExtDecList: error COMMA . ExtDecList

    error  shift, and go to state 13
    ID     shift, and go to state 31

    ExtDecList  go to state 32
    VarDec      go to state 17


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 33
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 36
    ParamDec         go to state 37


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 24

    8 ExtDecList: VarDec COMMA . ExtDecList
   10           | VarDec COMMA . error

    error  shift, and go to state 39
    ID     shift, and go to state 31

    ExtDecList  go to state 40
    VarDec      go to state 17


State 25

   27 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 42


State 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI
   46    | Specifier . DecList error

    error  shift, and go to state 43
    ID     shift, and go to state 31

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 29

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 30

   42 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 48
    Def              go to state 30


State 31

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 32

    9 ExtDecList: error COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 33

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 49


State 34

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 35

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 31

    VarDec  go to state 50


State 36

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 37

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 25 (VarList)


State 38

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 39

    9 ExtDecList: error . COMMA ExtDecList
   10           | VarDec COMMA error .

    COMMA  shift, and go to state 20

    $default  reduce using rule 10 (ExtDecList)


State 40

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 41

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 25
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    ID      shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 42

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 43

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 68


State 44

   20 VarDec: VarDec . LB INT RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 23
    ASSIGNOP  shift, and go to state 69

    $default  reduce using rule 49 (Dec)


State 45

   44 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error

    error  shift, and go to state 70
    SEMI   shift, and go to state 71


State 46

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 47 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 49

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 50

   20 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 26 (ParamDec)


State 51

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 52

   24 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 73
    ParamDec         go to state 37


State 53

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 54

   36 Stmt: error . SEMI

    SEMI  shift, and go to state 74


State 55

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 56

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 57

   60 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 75


State 58

   61 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 76


State 59

   59 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 77


State 60

   32 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 78


State 61

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP error RP Stmt
   40     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 62

   35 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP error RP Stmt

    LP  shift, and go to state 80


State 63

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   70    | ID . LP error RP

    LP  shift, and go to state 81

    $default  reduce using rule 66 (Exp)


State 64

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 65

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 66

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 25
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    ID      shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 83
    Stmt      go to state 66
    Exp       go to state 67


State 67

   30 Stmt: Exp . SEMI
   37     | Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94
    SEMI      shift, and go to state 95


State 68

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 69

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 96


State 70

   46 Def: Specifier DecList error .

    $default  reduce using rule 46 (Def)


State 71

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 72

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 31

    VarDec   go to state 44
    DecList  go to state 97
    Dec      go to state 46


State 73

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 74

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 75

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error  shift, and go to state 98
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    LB     shift, and go to state 91
    DOT    shift, and go to state 94

    error     [reduce using rule 60 (Exp)]
    PLUS      reduce using rule 60 (Exp)
    MINUS     reduce using rule 60 (Exp)
    AND       reduce using rule 60 (Exp)
    OR        reduce using rule 60 (Exp)
    RP        reduce using rule 60 (Exp)
    RB        reduce using rule 60 (Exp)
    ASSIGNOP  reduce using rule 60 (Exp)
    RELOP     reduce using rule 60 (Exp)
    SEMI      reduce using rule 60 (Exp)
    COMMA     reduce using rule 60 (Exp)


State 76

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error  shift, and go to state 98
    LB     shift, and go to state 91
    DOT    shift, and go to state 94

    error     [reduce using rule 61 (Exp)]
    PLUS      reduce using rule 61 (Exp)
    MINUS     reduce using rule 61 (Exp)
    STAR      reduce using rule 61 (Exp)
    DIV       reduce using rule 61 (Exp)
    AND       reduce using rule 61 (Exp)
    OR        reduce using rule 61 (Exp)
    RP        reduce using rule 61 (Exp)
    RB        reduce using rule 61 (Exp)
    ASSIGNOP  reduce using rule 61 (Exp)
    RELOP     reduce using rule 61 (Exp)
    SEMI      reduce using rule 61 (Exp)
    COMMA     reduce using rule 61 (Exp)


State 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 98
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RP        shift, and go to state 99
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 78

   32 Stmt: RETURN Exp . SEMI
   38     | RETURN Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 100
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94
    SEMI      shift, and go to state 101


State 79

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   39     | IF LP . error RP Stmt
   40     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 102
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 103


State 80

   35 Stmt: WHILE LP . Exp RP Stmt
   41     | WHILE LP . error RP Stmt

    error  shift, and go to state 104
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 105


State 81

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   70    | ID LP . error RP

    error  shift, and go to state 106
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 107
    ID     shift, and go to state 63

    Exp   go to state 108
    Args  go to state 109


State 82

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 83

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 84

   37 Stmt: Exp error .
   71 Exp: Exp error . ID

    ID  shift, and go to state 110

    ID        [reduce using rule 37 (Stmt)]
    $default  reduce using rule 37 (Stmt)


State 85

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 111


State 86

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 112


State 87

   57 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 113


State 88

   58 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 114


State 89

   52 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 115


State 90

   53 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 116


State 91

   64 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB

    error  shift, and go to state 117
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 118


State 92

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 119


State 93

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 120


State 94

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 121


State 95

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 96

   50 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 98
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94

    error  [reduce using rule 50 (Dec)]
    SEMI   reduce using rule 50 (Dec)
    COMMA  reduce using rule 50 (Dec)


State 97

   48 DecList: Dec COMMA DecList .

    $default  reduce using rule 48 (DecList)


State 98

   71 Exp: Exp error . ID

    ID  shift, and go to state 110


State 99

   59 Exp: LP Exp RP .

    $default  reduce using rule 59 (Exp)


State 100

   38 Stmt: RETURN Exp error .
   71 Exp: Exp error . ID

    ID  shift, and go to state 110

    ID        [reduce using rule 38 (Stmt)]
    $default  reduce using rule 38 (Stmt)


State 101

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 102

   39 Stmt: IF LP error . RP Stmt
   40     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 122


State 103

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 98
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RP        shift, and go to state 123
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 104

   41 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 124


State 105

   35 Stmt: WHILE LP Exp . RP Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error     shift, and go to state 98
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RP        shift, and go to state 125
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 106

   70 Exp: ID LP error . RP

    RP  shift, and go to state 126


State 107

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


State 108

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID
   72 Args: Exp . COMMA Args
   73     | Exp .

    error     shift, and go to state 98
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94
    COMMA     shift, and go to state 127

    RP  reduce using rule 73 (Args)


State 109

   62 Exp: ID LP Args . RP

    RP  shift, and go to state 128


State 110

   71 Exp: Exp error ID .

    $default  reduce using rule 71 (Exp)


State 111

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   55    | Exp PLUS Exp .
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71    | Exp . error ID

    error  shift, and go to state 98
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    LB     shift, and go to state 91
    DOT    shift, and go to state 94
